# OpenBR_MQTT_Service

./: .client_shared.cpp.swp  .service.cpp.swp  CMakeLists.txt  README.md  client_shared.cpp  config.mk  cscope.files  cscope.out  face_recognition.cpp  listen_pub.cpp  service.cpp  service.h  sub_send  tags  test.cpp
data/: predata.txt
service/: Makefile  buf  client_shared.c  listen_pub  mosquitto_pub  mosquitto_sub  sub_send.c
